# QTframework

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  Dockerfile  GITHUB_PAGES_SETUP.md  INSTRUCTIONS_FOR_APP_DEVELOPMENT.md  LICENSE  Makefile  README.md  REFACTORING_COMPLETE.md  REFACTORING_EXAMPLES.md  _ci_test_errors.json  _ci_test_errors.md  _ci_test_errors_codespell.txt  codecov.yml  pyproject.toml  test_annotations.json  test_annotations.py  test_annotations.txt  test_dropdown.py
.claude/: settings.local.json
.github/: cliff.toml  dependabot.yml  labeler.yml
.github/actions/: README.md
.github/actions/build-docs/: action.yml
.github/actions/setup-environment/: action.yml
.github/scripts/: __init__.py  annotation_utils.py  bandit_annotate.py  detect_secrets_annotate.py  markdownlint_annotate.py  mypy_annotate.py  prettier_annotate.py  pytest_annotate.py  pytest_future_python.py  pyupgrade_annotate.py  ruff_annotate.py  ruff_format_annotate.py  sphinx_annotate.py
.github/workflows/: _ci_test_errors.yml  ci.yml  docs.yml  test-reusable.yml  test_annotations.yml
docs/: conf.py  index.md  quickstart.md  theming_guide.md
docs/api/: index.md
docs/guides/: internationalization.md  navigation.md  plugins.md  state_management.md  theming.md
docs/widgets/: config_editor.md
examples/: config_demo.py  theme_demo.py
examples/demo_app/: main.py
examples/features/: config.yaml.example  main.py
examples/features/app/: __init__.py  content.py  dockwidgets.py  menubar.py  navigation.py  showcase_window.py  toolbar.py
examples/features/app/pages/: __init__.py  animations.py  base.py  buttons.py  config.py  config_editor.py  dialogs.py  display.py  forms.py  i18n.py  inputs.py  layouts.py  selections.py  state.py  tables.py  theming.py  trees_lists.py
examples/features/app/widgets/: __init__.py  code_display.py
resources/: demo_defaults.json  settings.json
resources/icons/: create_arrow_png.py
resources/themes/: monokai.json  monokai.py  monokai.yaml  nord.yaml  solarized_dark.yaml
scripts/: benchmark_summary.py  i18n_manager.py  test_summary.py  validate_translations.py
src/: test_annotations.py
src/qtframework/: __init__.py  _ci_test_errors.py  test_annotations.py
src/qtframework/config/: __init__.py  config.py  file_loader.py  manager.py  migrator.py  providers.py  validator.py
src/qtframework/core/: __init__.py  application.py  context.py  window.py
src/qtframework/i18n/: __init__.py  babel_manager.py  contexts.py  extractor.py  json_to_po.py  locale_formatter.py  translation_loader.py  widgets.py
src/qtframework/i18n/locale/: qtframework.pot
src/qtframework/i18n/locale/en_US/LC_MESSAGES/: qtframework.po
src/qtframework/i18n/locale/es_ES/LC_MESSAGES/: qtframework.po
src/qtframework/i18n/locale/fr_FR/LC_MESSAGES/: qtframework.po  qtframework_simple.po
src/qtframework/layouts/: __init__.py  base.py  card.py  flow.py  sidebar.py
src/qtframework/navigation/: __init__.py  navigator.py  router.py
src/qtframework/plugins/: __init__.py  base.py  manager.py
src/qtframework/state/: __init__.py  actions.py  middleware.py  reducers.py  store.py
src/qtframework/themes/: __init__.py  base.py  builtin_themes.py  font_loader.py  manager.py  presets.py  stylesheet_generator.py  theme.py  theme_manager.py  tokens.py
src/qtframework/utils/: __init__.py  decorators.py  exceptions.py  logger.py  paths.py  resources.py  search.py  styling.py  validation.py  validation_i18n.py
src/qtframework/widgets/: __init__.py  badge.py  base.py  buttons.py  code_display.py  color_swatch.py  config_editor.py  containers.py  count_badge.py  inputs.py  layouts.py  pages.py
src/qtframework/widgets/advanced/: __init__.py  charts.py  dialogs.py  navigation.py  notifications.py  page_manager.py  scroll_area.py  tables.py  tabs.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  test_factories.py
tests/integration/: __init__.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_application.py  test_base_widget.py  test_basic.py  test_buttons.py  test_config.py  test_context.py  test_exceptions.py  test_file_loader.py  test_i18n.py  test_inputs.py  test_layouts.py  test_manager.py  test_migrator.py  test_providers.py  test_state.py  test_store.py  test_theme.py  test_theme_manager.py  test_tokens.py  test_validation.py  test_validator.py  test_window.py
tests/utils/: __init__.py  test_helpers.py
